opam-version: "2.0"
name: "tofn"
version: "0.11"
synopsis: "Typed ordered fuzzy numbers"
maintainer: "Matthew Kukla <matt.kukla@yandex.ru>"
authors: "Matthew Kukla <matt.kukla@yandex.ru>"
bug-reports: "Matthew Kukla <matt.kukla@yandex.ru>"
license: "GPL-3.0"
homepage: "https://mkukla.net/doc/tofn/"
depends: ["ocaml" "ocamlbuild"]
build: [["dune" "build" "-p" name "-j" jobs "@install" ]]
